app and domain base class reintroduction